--- a/src/main/resources/templates/layouts/listview/listofrequestForQuotation.html
+++ b/src/main/resources/templates/layouts/listview/listofrequestForQuotation.html
@@ -48,7 +48,7 @@
 															<th scope="col">#</th>
 															<th scope="col">RFQ Number</th>
 															<th scope="col">RFQ Date</th>
-															<th scope="col">RFQ Type</th>
+															<!-- <th scope="col">RFQ Type</th> -->
 
 
 
@@ -59,7 +59,7 @@
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${rfq.rfqNo}">Garrett Winters</td>
 															<td th:text="${#dates.format(rfq.rfqDate, 'dd-MMM-yyyy')}">Garrett Winters</td>
-															<td th:text="${rfq.rfqType}">Garrett Winters</td>
+															<!-- <td th:text="${rfq.rfqType}">Garrett Winters</td> -->
 
 
 
