--- a/src/main/resources/templates/layouts/Master/requestForQuotation.html
+++ b/src/main/resources/templates/layouts/Master/requestForQuotation.html
@@ -24,6 +24,12 @@
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+
 
 <style>
 .form-control-sm {
@@ -75,7 +81,7 @@
 							<!-- Default box -->
 							<div class="box">
 
-
+								<input type="hidden" id="mess" name="mess" th:value="${message}">
 
 								<div class="row">
 									<!-- left column -->
@@ -237,17 +243,17 @@
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			name="listRFQuotation[0].itemSpec" required
+																			name="listRFQuotation[0].itemSpec"
 																			title="item spec"></td>
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			name="listRFQuotation[0].termCondition" required
+																			name="listRFQuotation[0].termCondition"
 																			title="term condition" style="width: 170px"></td>
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			name="listRFQuotation[0].remarks" required
+																			name="listRFQuotation[0].remarks"
 																			title="remarks" style="width: 170px"></td>
 
 
@@ -498,13 +504,13 @@
 																		+ "<td><input type='date'style='font-size: 0.95rem'class='form-control form-control-sm'name='listRFQuotation[" + idIndex1 + "].rfqDate'required></td>"
 
 																		/*  item specification  */
-																		+ "<td><input type='text'class='form-control form-control-sm'name='listRFQuotation[" + idIndex1 + "].itemSpec'required title=''></td>"
+																		+ "<td><input type='text'class='form-control form-control-sm'name='listRFQuotation[" + idIndex1 + "].itemSpec' title=''></td>"
 
 																		/*  term and condition  */
-																		+ "<td><input type='text'class='form-control form-control-sm'name='listRFQuotation[" + idIndex1 + "].termCondition'required style='width: 170px' title=''></td>"
+																		+ "<td><input type='text'class='form-control form-control-sm'name='listRFQuotation[" + idIndex1 + "].termCondition' style='width: 170px' title=''></td>"
 
 																		/*  remarks */
-																		+ "<td><input type='text'class='form-control form-control-sm'name='listRFQuotation[" + idIndex1 + "].remarks'required style='width: 170px' title=''></td>"
+																		+ "<td><input type='text'class='form-control form-control-sm'name='listRFQuotation[" + idIndex1 + "].remarks' style='width: 170px' title=''></td>"
 
 														);
 												$('#indentTable').append(
@@ -903,6 +909,22 @@
 
 		jQuery('.numbersOnly').keyup(function() {
 			this.value = this.value.replace(/[^0-9\.]/g, '');
+		});
+
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
+
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
+				});
+			} else {
+				console.log("ajax request : " + message);
+			}
+
 		});
 	</script>
 	<!--   <section class="content">
